.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/effectInFailure.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/effectInFailure.ts(5,14): warning TS377054: The error channel contains an Effect (Effect<void, never, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)
/.src/effectInFailure.ts(5,29): warning TS377054: The error channel contains an Effect (Effect<void, never, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)
/.src/effectInFailure.ts(15,14): warning TS377054: The error channel contains an Effect (Effect<any, Effect<void, never, never>, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)
/.src/effectInFailure.ts(18,5): warning TS377054: The error channel contains an Effect (Effect<void, never, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)


==== /.src/effectInFailure.ts (4 errors) ====
    import { Data, Effect } from "effect"
    
    class JsonParseError extends Data.TaggedError("JsonParseError")<{ cause: unknown }> {}
    
    export const shouldReport = Effect.try({
                 ~~~~~~~~~~~~
!!! warning TS377054: The error channel contains an Effect (Effect<void, never, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)
                                ~~~~~~~~~~~~
      try: () => JSON.parse("{"),
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      catch: (e) => Effect.log(e)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    })
    ~~
!!! warning TS377054: The error channel contains an Effect (Effect<void, never, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)
    
    export const shouldNotReport = Effect.try({
      try: () => JSON.parse("{"),
      catch: (e) => new JsonParseError({ cause: e })
    })
    
    export const shouldReportOnlyInner = Effect.try({
                 ~~~~~~~~~~~~~~~~~~~~~
!!! warning TS377054: The error channel contains an Effect (Effect<any, Effect<void, never, never>, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)
      try: () => JSON.parse("{"),
      catch: (e) =>
        Effect.try({
        ~~~~~~~~~~~~
          try: () => JSON.parse(String(e)),
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
          catch: (innerError) => Effect.log(innerError)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        })
    ~~~~~~
!!! warning TS377054: The error channel contains an Effect (Effect<void, never, never>). Putting Effect computations in the failure channel is not intended; keep only failure types there. effect(effectInFailure)
    })
    
